adding itinararies feature
